--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 i{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
-    margin-left: 350px;
-    margin-right: 110px;
+    margin-left: 380px;
+    margin-right: 40px;
 }
 .stick{
     display: flex;
@@ -12,5 +12,28 @@ i{
 a{
     color: white;
     margin-top: 15px;
-    margin-left: 100px;
+    margin-left: 50px;
+}
+.select1{
+    display: flex;
+    /* border: black 1px solid; */
+    background-color: whitesmoke;
+}
+.select1 div:nth-child(1){
+    margin-top: 15px;
+    margin-left:1260px;
+    margin-right: 20px;
+    /* border: 2px red solid; */
+    height: fit-content;
+}
+.select1 div:nth-child(1) select{
+    border: none;
+    background-color: whitesmoke;
+    color: rgb(5, 107, 107);
+    /* border: 1px solid black; */
+}
+.select1 div:nth-child(2) p{
+    color: rgb(5, 107, 107);
+    /* border: 2px green solid; */
+    margin-top: -3px;
 }
