--- a/style.css
+++ b/style.css
@@ -34,6 +34,95 @@ a{
 }
 .select1 div:nth-child(2) p{
     color: rgb(5, 107, 107);
-    /* border: 2px green solid; */
+    background-color: whitesmoke;
     margin-top: -3px;
 }
+.select1 div a{
+    text-decoration: none;
+}
+.logo{
+    display: flex;
+}
+#logo1{
+    height: 50px;
+    width: 230px;
+    /* border: 2px solid red; */
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 4px;
+}
+.search{
+    display: flex;
+    height: 35px;
+    margin-left: 620px;
+    border: 2px rgb(21, 151, 151) solid;
+    width: 399x;
+    border-radius: 4px;
+    margin-top: 13px;
+    /* border: red 2px solid; */
+
+}
+#paymnt{
+    height: 35px;
+    /* border: 2px solid red; */
+    margin-left: 50px;
+    margin-top: 13px;
+}
+
+
+
+
+.dropbtn {
+    background-color: white;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+      background-color:whitesmoke;
+      color: teal;
+      text-decoration: underline;
+  
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: whitesmoke;
+    color: teal;
+  }
+  #d{
+      margin-left: 30px;
+  }
