--- a/signin.css
+++ b/signin.css
@@ -1,90 +1,107 @@
 *{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+   margin: 0px;
+   padding: 0px;
+   box-sizing: border-box;
 }
 
- */
- .popup .form h2{
-    text-align: center;
-    color: #222;
-    margin: 10px 0px 20px ;
-    font-size: 25px;
- }
- .popup .form .form-element {
-    margin: 15px 0px;
- }
- .popup .form .form-element label {
-    font-size: 14px;
-    color:#222;
- }
- .popup .form .form-element input[type="text"],
- .popup .form .form-element input[type="password"]{
-   font-size: 15px;
-    margin-top:5px;
-    display: block;
-    width: 100%;
-    padding: 10px;
-    outline: none;
-    border: 1px solid #aaa;
-    border-radius: 5px;
- }
- .popup .form .form-element input[type="checkbox"]{
-    margin-right: 5px;
- }
- .popup .form .form-element button{
-    width: 100%;
-    height: 40px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-    background-color: #222;
-    color: #f5f5f5;
-    border-radius: 5px;
-    cursor:pointer;
- }
- .popup .form .form-element a{
-    display: block;
-    text-align:right;
-    font-size: 15px;
-    color:#1a79ca ;
-    text-decoration: none;
-    font-weight: 600;
- }
- .popup-overlay{
-   position: fixed;
-   top: 0px;
-   left: 0px;
+*/
+.popup .form h2{
+   text-align: center;
+   color: #222;
+   margin: 10px 0px 20px ;
+   font-size: 25px;
+}
+.popup .form .form-element {
+   margin: 15px 0px;
+}
+.popup .form .form-element label {
+   font-size: 14px;
+   color:#222;
+}
+ .form-element input[type="text"],
+ .form-element input[type="password"]{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 15px;
+   /* margin-top:5px; */
+   display: block;
    width: 100%;
-   height: 100%;
-   background:rgba(0,0,0,0.5);
-   display: none;
+   padding: 10px;
+   outline: none;
+   border: 1px solid #aaa;
+   border-radius: 5px;
+}
+.form-element input[type="checkbox"]{
+   margin-right: 5px;
+   margin-top: 10px;
+
+}
+ .form-element button{
+  margin-top: 20px;
+   width: 100%;
+   height: 40px;
+   border: none;
+   outline: none;
+   font-size: 15px;
+   background-color: #222;
+   color: #f5f5f5;
+   border-radius: 5px;
+   cursor:pointer;
+}
+.form-element a{
+  margin-top: 20px;
+   display: block;
+   text-align:center;
+   font-size: 15px;
+   color:#1a79ca ;
+   text-decoration: none;
+   font-weight: 600;
+}
+.popup-overlay{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background:rgba(0,0,0,0.5);
+  display: none;
 
 }
 .popup{
-   position: fixed;
-   top: -150%;
-   left: 50%;
-   transform: translate(-50%,-50%);
-   width: 400px;
-   background:#f5f5f5;
-   font-family: "Raleway";
-   padding: 20px;
+  position: fixed;
+  top: -150%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 400px;
+  background:#f5f5f5;
+  font-family: "Raleway";
+  padding: 20px;
+  border-radius: 10px;
 }
 .popup .popup-close-btn{
-   position:absolute;
-   top: 10px;
-   right: 10px;
-   font-size: 20px;
-   background: #555;
-   padding: 10px;
-   border-radius: 10px;
+  position:absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  background: #555;
+  padding: 10px;
+  border-radius: 10px;
 }
 body.popup-active .popup{
-   top: 50%;
+  top: 50%;
 }
 body.popup-active .popup-overlay{
-  display: block; 
+ display: block; 
 }
- 
+#heading{
+  text-align: center;
+}
 
+.logoset{
+  margin: auto;
+  width: 50%;
+  /* border: 2px solid red; */
+}
+.logoset img{
+  width:100%;
+}
