--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a{
 
 
 
-.dropbtn {
+.drop_button {
     background-color: white;
     color: black;
     padding: 16px;
@@ -82,13 +82,13 @@ a{
   }
   
   /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+  .drop_down {
     position: relative;
     display: inline-block;
   }
   
   /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+  .dropdown_cont {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -98,7 +98,7 @@ a{
   }
   
   /* Links inside the dropdown */
-  .dropdown-content a {
+  .dropdown_cont a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -106,7 +106,7 @@ a{
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
+  .dropdown_cont a:hover {
       background-color:whitesmoke;
       color: teal;
       text-decoration: underline;
@@ -114,15 +114,37 @@ a{
   }
   
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+  .drop_down:hover .dropdown_cont {
     display: block;
   }
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
+  .drop_down:hover .drop_button {
     background-color: whitesmoke;
     color: teal;
   }
   #d{
       margin-left: 30px;
   }
+
+  .pic1{
+       display: flex;
+       /* border: 2px solid black; */
+  }
+
+  .pic1 a img{
+    width: 353px;
+    margin-right: -50px;
+  }
+
+  .shop{
+    background-image: url("./dr.jpg");
+    height: 650px;
+    width: 95%;
+    margin-left: 40px;
+    margin-top: 30px;
+  }
+
+ 
+  
+  
