--- a/signin.css
+++ b/signin.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  /* border: 2px solid red; */
 }
 
 */
@@ -28,10 +29,13 @@
   width: 100%;
   padding: 10px;
   outline: none;
-  border: 1px solid #aaa;
+  border: 1px solid black;
   border-radius: 5px;
+     /* border: 2px solid red; */
+   background-color: white;
+
 }
-.form-element input[type="checkbox"]{
+.form-element input[type="checkbox"]{ 
   margin-right: 5px;
   margin-top: 10px;
 
@@ -83,9 +87,10 @@
  top: 10px;
  right: 10px;
  font-size: 20px;
- background: #555;   
+ background: #ea0101;   
  padding: 10px;
  border-radius: 10px;
+ color: white;
 }
 body.popup-active .popup{
  top: 50%;
@@ -95,19 +100,16 @@ display: block;
 }
 #heading{
  text-align: center;
- margin-top: -50px;
- margin-bottom: 20px;
-}
+ /* border: 2px solid red; */
 
+}
 .logoset{
  margin: auto;
  width: 50%;
- margin-top: -60px;
  /* border: 2px solid red; */
 }
 .logoset img{
  width:100%;
-  margin-top:0px;
  /* border: 2px solid red; */
 
 }
@@ -115,5 +117,123 @@ display: block;
 #empty{
  color: red;
  text-align: center;
- margin-bottom: 20px;
 }
+#open-popup-btn{
+ height:40px;
+ border: none;
+
+}
+
+
+
+*{
+ background-color:rgb(241,240,234);
+
+
+}
+#signup{
+ /* display: none; */
+ background-color:rgb(241,240,234);
+}
+.set{    
+ display: none;
+ width: 25%;
+ height: 650px;
+ /* border-style: dashed; */
+ text-align: center;
+ margin-left: 600px;
+ margin-top: 50px;
+ box-shadow: rgba(0, 0, 0, 0.2) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
+.set img{
+ margin-top: 50px;
+ /* margin-left: 100px; */
+ width: 60%;
+}
+#name{
+ border:none;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+#gender{
+ border:none;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+#zipcode{
+ border:none;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+.Email{
+ margin-top: 10px;
+ border:none;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+.Password{
+ border: none;
+ margin-left: 15px;
+ margin-top: 10px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+#mobile{
+ border: none;
+ margin-top: 10px;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ /* border: 2px solid red; */
+}
+
+.submit{
+ border: none;
+ margin-top: 10px;
+ margin-left: 15px;
+ width: 90%;
+ height: 30px;
+ background-color:#555;
+ border-radius: 5px;
+ color: white;
+
+
+}
+.back{
+ margin-top: 15px;
+ justify-content:space-evenly;
+ background-color:rgb(241,240,234);
+
+
+}
+.logoset1 img{
+ /* border: 2px solid red; */
+ margin-top:0px;
+}
+.h2{
+ margin-top: -60px;
+ margin-bottom: 80px;
+ /* border: 2px solid red; */
+
+}
+
+/* body{
+ border: 1px solid rgb(255, 254, 254);
+ height: 750px;
+ background-image:
+ url("https://imgs.search.brave.com/2hyC_yO9PpNTbmq0Giys4Tzb5fIjSgvbCd52HY_WsSA/rs:fit:800:600:1/g:ce/aHR0cHM6Ly9jZG4u/ZHJpYmJibGUuY29t/L3VzZXJzLzM0MzM4/Mi9zY3JlZW5zaG90/cy8xNTc3NTU5L3Vu/dGl0bGVkLTEuZ2lm.gif");
+background-size: cover;
+background-repeat:no-repeat;
+} */
+
+
+
+
