--- a/signin.css
+++ b/signin.css
@@ -29,15 +29,17 @@
   width: 100%;
   padding: 10px;
   outline: none;
-  border: 1px solid black;
+  /* border: 1px solid rgb(131, 12, 12); */
   border-radius: 5px;
      /* border: 2px solid red; */
-   background-color: white;
+   background-color: rgb(241,240,234);
 
 }
 .form-element input[type="checkbox"]{ 
   margin-right: 5px;
   margin-top: 10px;
+  background-color:rgb(241,240,234)
+
 
 }
 .form-element button{
@@ -72,25 +74,27 @@
 
 }
 .popup{
- position: fixed;
+ position: absolute;
  top: -150%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 400px;
- background:#f5f5f5;
+ background-color:rgb(241,240,234);
  font-family: "Raleway";
  padding: 20px;
  border-radius: 10px;
+ /* border: 2px solid red; */
 }
 .popup .popup-close-btn{
  position:absolute;
  top: 10px;
  right: 10px;
  font-size: 20px;
- background: #ea0101;   
+ background: #000000;   
  padding: 10px;
- border-radius: 10px;
+ border-radius: 5px;
  color: white;
+ 
 }
 body.popup-active .popup{
  top: 50%;
@@ -101,6 +105,7 @@ display: block;
 #heading{
  text-align: center;
  /* border: 2px solid red; */
+ /* background-color: white; */
 
 }
 .logoset{
@@ -126,11 +131,11 @@ display: block;
 
 
 
-*{
+/* *{
  background-color:rgb(241,240,234);
 
 
-}
+} */
 #signup{
  /* display: none; */
  background-color:rgb(241,240,234);
@@ -138,14 +143,24 @@ display: block;
 .set{    
  display: none;
  width: 25%;
- height: 650px;
+ /* height: 650px; */
  /* border-style: dashed; */
  text-align: center;
- margin-left: 600px;
- margin-top: 50px;
- box-shadow: rgba(0, 0, 0, 0.2) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
+ /* margin-left: 100px; */
+ /* margin-top: 50px; */
+ box-shadow: rgba(0, 0, 0, 0.2) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+ position: absolute;
+ top: 75%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+
+ background-color:rgb(241,240,234);
+ font-family: "Raleway";
+ padding: 20px;
+ border-radius: 10px;
+}
 .set img{
- margin-top: 50px;
+ /* margin-top: 50px; */
  /* margin-left: 100px; */
  width: 60%;
 }
@@ -157,6 +172,7 @@ display: block;
  /* border: 2px solid red; */
 }
 #gender{
+  margin-top: 10px;
  border:none;
  margin-left: 15px;
  width: 90%;
@@ -164,6 +180,7 @@ display: block;
  /* border: 2px solid red; */
 }
 #zipcode{
+  margin-top: 10px;
  border:none;
  margin-left: 15px;
  width: 90%;
@@ -236,4 +253,46 @@ background-repeat:no-repeat;
 
 
 
+#fill1{
+  color: red;
+  text-align: center;
+}
+#fill2{
+  color: rgb(15, 139, 15);
+  text-align: center;
+}
 
+@media (min-width: 30px) and (max-width: 900px) {
+  .set{    
+    display: none;
+    width: 55%;
+    height: 650px;
+    border-style: dashed;
+    text-align: center;
+    margin-left: 100px;
+    margin-top: 50px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
+}
+.account:hover + .accountsec {
+  display: block;
+  position: absolute;
+  
+}
+.accountsec{
+  display: none;
+}
+#accountbtn{
+  display: none;
+  border: solid rgb(238, 234, 215);
+  border-radius: 50%;
+  background-color: gray;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: -4px;
+
+}
+.accountsec div{
+  background-color: antiquewhite;
+  padding: 10px;
+}
